--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   font-family: "Rubik", sans-serif;
 }
 body {
-  margin: 0;
+  margin: 0 10px 0 0;
   width: 100vw;
   height: 100vh;
   flex-direction: column;
@@ -18,7 +18,7 @@ body {
 .main-nav {
   list-style: none;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 50vw;
   align-items: center;
   margin: 5px auto;
@@ -52,6 +52,7 @@ h1 {
 #about-us-gallery {
   display: flex;
   justify-content: space-around;
+  overflow-x: scroll;
 }
 .store-imgs {
   width: 150px;
@@ -74,3 +75,25 @@ td {
   display: flex;
   justify-content: space-between;
 }
+#contact-us-form {
+  width: 40vw;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: rgba(211, 211, 211, 0.65);
+  margin: 15px auto;
+  box-sizing: border-box;
+  box-shadow: 3px 3px 16px 0px rgba(98, 98, 98, 1);
+}
+#store-main-flex {
+  width: 95vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+#store-main-flex > div {
+  width: 30vw;
+  background-color: rgba(211, 211, 211, 0.65);
+  overflow: hidden;
+}
+
